vid and contact fixed

--- a/Videos/Index.html
+++ b/Videos/Index.html
@@ -2,14 +2,20 @@
 
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <meta charset="utf-8" />
     <title>DBS Website</title>
 
     <link rel="stylesheet" type="text/css" href="../style.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="vid.js"></script>
 </head>
 
 <body>
@@ -25,7 +31,7 @@
                     <div class="border"></div>
                     <div class="li"><a href="../Index.html">Home</a></div>
                     <div class="border"></div>
-                    <div class="li"><a href="../Lesson Plans/Index.html"><span class="pill-label">Lessons</span></a></div>
+                    <div class="li"><a href="../LessonPlans/Index.html"><span class="pill-label">Lessons</span></a></div>
                     <div class="border"></div>
                     <div class="li"><a href="../Events/Index.html"><span class="pill-label">Events</span></a></div>
                     <div class="border"></div>
@@ -46,10 +52,19 @@
             <table>
                 <tr>
                     <td class="event-content">
-                        <div class="centered">
-                            <iframe height="400" width="600" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                        </div>
+                        <div class="page">
+                            <p>
+                                <a href="#media-popup0" data-media="https://www.youtube.com/embed/6vIOJYBaYLg">
+                                    <img src="../Images/3_divers.jpg" width="150" height="100">
+                                </a>
+                            </p>
 
+                            <div class="popup" id="media-popup0">
+                                <iframe width="70%" height="70%" src="" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="event-content">
                         <p>
                             <b>Dive Beneath The Surface</b><br>
                             <small>
@@ -63,10 +78,19 @@
                 </tr>
                 <tr>
                     <td class="event-content">
-                        <div class="centered">
-                            <iframe height="400" width="600" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                        </div>
+                        <div class="page">
+                            <p>
+                                <a href="#media-popup1" data-media="https://www.youtube.com/embed/6vIOJYBaYLg">
+                                    <img src="../Images/3_divers.jpg" width="150" height="100">
+                                </a>
+                            </p>
 
+                            <div class="popup" id="media-popup1">
+                                <iframe width="100" height="70" src="" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="event-content">
                         <p>
                             <b>Dive Beneath The Surface</b><br>
                             <small>
@@ -80,10 +104,19 @@
                 </tr>
                 <tr>
                     <td class="event-content">
-                        <div class="centered">
-                            <iframe height="400" width="600" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                        </div>
+                        <div class="page">
+                            <p>
+                                <a href="#media-popup2" data-media="https://www.youtube.com/embed/6vIOJYBaYLg">
+                                    <img src="../Images/3_divers.jpg" width="150" height="100">
+                                </a>
+                            </p>
 
+                            <div class="popup" id="media-popup2">
+                                <iframe width="100" height="70" src="" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="event-content">
                         <p>
                             <b>Dive Beneath The Surface</b><br>
                             <small>
@@ -97,10 +130,19 @@
                 </tr>
                 <tr>
                     <td class="event-content">
-                        <div class="centered">
-                            <iframe height="400" width="600" src="https://www.youtube.com/embed/ntTbwY3wswo?start=2000" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                        </div>
+                        <div class="page">
+                            <p>
+                                <a href="#media-popup3" data-media="https://www.youtube.com/embed/6vIOJYBaYLg">
+                                    <img src="../Images/3_divers.jpg" width="150" height="100">
+                                </a>
+                            </p>
 
+                            <div class="popup" id="media-popup3">
+                                <iframe width="100" height="70" src="" frameborder="0" allowfullscreen></iframe>
+                            </div>
+                        </div>
+                    </td>
+                    <td class="event-content">
                         <p>
                             <b>Dive Beneath The Surface</b><br>
                             <small>
@@ -114,19 +156,6 @@
                 </tr>
 
             </table>
-
-            <!--<div class="video-div">-->
-                <!--<div class="video-wrapper">-->
-                    <!--&lt;!&ndash;<video id="video" style="height: 600px;" controls>-->
-                        <!--<source src="Videos/DSCN0043.MOV">-->
-                    <!--</video>&ndash;&gt;-->
-                    <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLx0sYbCqOb8TBPRdmBHs5Iftvv9TPboYG" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>-->
-                    <!--&lt;!&ndash;<div class="video-title top-center translucent-black-bg">-->
-                        <!--Video Title-->
-                    <!--</div>&ndash;&gt;-->
-                <!--</div>-->
-            <!--</div>-->
-
         </div>
 
         <div id="footer">
