--- a/Contact/Index.html
+++ b/Contact/Index.html
@@ -65,33 +65,32 @@
                     <br>
                     <b>Email</b> <br> <small>
                     <a href="mailto:divebeneaththesurface@gmail.com?subject=DBS Website Form">
-                        divebeneaththesurface@gmail.com
+                        dbs@calpoly.edu
                     </a>
                     <br></small>
                 </p>
                 <p>
                     <br>
-                    <b>Phone</b> <br> <small>xxx xxx xxxx</small>
-                </p>
-                <p>
-                    <br>
-                    <b>Address</b> <br> <small>P Sherman, 42, Wallaby Way, Sydney</small>
+                    <b>Address</b> <br> <small>Crow White<br>Biology Department, Cal Poly<br>1 Grand Ave<br>
+                San Luis Obispo<br>CA 93407</small>
                 </p>
             </div>
 
             <div class="contact-form">
-                <form action="https://formspree.io/alexvetushko@icloud.com" method="POST">
-                    <label for="fname">First Name</label>
-                    <input type="text" id="fname" name="firstname" placeholder="Your first name">
-                    <label for="lname">Last Name</label>
-                    <input type="text" id="lname" name="lastname" placeholder="Your last name">
-                    <label for="lname">Email</label>
-                    <input type="text" id="email" name="email" placeholder="Your email">
-                    <label for="subject">Subject</label>
-                    <input type="text" id="subject" name="subject" placeholder="Subject">
-                    <textarea id="message" name="message" placeholder="Write something" style="height:170px"></textarea>
-                    <input type="submit" value="Submit">
-                </form>
+                <div id="map" style="width:100%;height:500px"></div>
+
+                <script>
+                   function myMap() {
+                      var myCenter = new google.maps.LatLng(51.508742,-0.120850);
+                      var mapCanvas = document.getElementById("map");
+                      var mapOptions = {center: myCenter, zoom: 12};
+                      var map = new google.maps.Map(mapCanvas, mapOptions);
+                      var marker = new google.maps.Marker({position:myCenter});
+                      marker.setMap(map);
+                   }
+                </script>
+
+                <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbPs1ySIASx5mtaX8WqyDO2q8hz8s2Rgk&callback=myMap"></script>
             </div>
 
         </div>
