changed names and extensions

--- a/Videos/Index.html
+++ b/Videos/Index.html
@@ -23,13 +23,13 @@
     <div class="container" id="overall-container">
         <div class="container" id="header-div">
             <div class="logo">
-                <span><img width="80" height="80" src="../Images/logo.jpg" alt="DBS Logo"></span>
+                <span><img width="80" height="80" src="../Images/logo.JPG" alt="DBS Logo"></span>
                 <span class="title">Dive Beneath the Surface</span>
             </div>
             <div id="nav-menu-div">
                 <div class="my-nav my-nav-pills" id="nav-menu-ul">
                     <div class="border"></div>
-                    <div class="li"><a href="../Index.html">Home</a></div>
+                    <div class="li"><a href="../index.html">Home</a></div>
                     <div class="border"></div>
                     <div class="li"><a href="../LessonPlans/Index.html"><span class="pill-label">Lessons</span></a></div>
                     <div class="border"></div>
@@ -55,7 +55,7 @@
                         <div class="page">
                             <p>
                                 <a href="#media-popup0" data-media="https://www.youtube.com/embed/6vIOJYBaYLg">
-                                    <img src="../Images/3_divers.jpg" width="150" height="100">
+                                    <img src="../Images/3_divers.JPG" width="150" height="100">
                                 </a>
                             </p>
 
@@ -81,7 +81,7 @@
                         <div class="page">
                             <p>
                                 <a href="#media-popup1" data-media="https://www.youtube.com/embed/6vIOJYBaYLg">
-                                    <img src="../Images/3_divers.jpg" width="150" height="100">
+                                    <img src="../Images/3_divers.JPG" width="150" height="100">
                                 </a>
                             </p>
 
@@ -107,7 +107,7 @@
                         <div class="page">
                             <p>
                                 <a href="#media-popup2" data-media="https://www.youtube.com/embed/6vIOJYBaYLg">
-                                    <img src="../Images/3_divers.jpg" width="150" height="100">
+                                    <img src="../Images/3_divers.JPG" width="150" height="100">
                                 </a>
                             </p>
 
@@ -133,7 +133,7 @@
                         <div class="page">
                             <p>
                                 <a href="#media-popup3" data-media="https://www.youtube.com/embed/6vIOJYBaYLg">
-                                    <img src="../Images/3_divers.jpg" width="150" height="100">
+                                    <img src="../Images/3_divers.JPG" width="150" height="100">
                                 </a>
                             </p>
 
