--- a/Background/Index.html
+++ b/Background/Index.html
@@ -48,6 +48,7 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
+
     .content-rows {
         position: absolute;
         display: flex;
@@ -57,8 +58,8 @@
         padding-left: 10%;
         padding-right: 10%;
         font-size: 20px;
-        
     }
+
     #mission-content {
         flex: 3;
         padding: 10px;
@@ -138,7 +139,7 @@
 
         <div class="header-image-div">
             <img class="header-image" src="../Images/learning3.JPG" alt="First slide">
-            <!--<div class="center translucent-bg my-light-black-text dark-blue-translucent-bg">
+            <div class="center translucent-bg my-light-black-text dark-blue-translucent-bg">
                 <div class="content-row-transparent">
                     <div class="raised-card flex">
                         <div id="mission-content">
@@ -149,11 +150,11 @@
                         </div>
                     </div>
                 </div>
-            </div>-->
-            <div class="center translucent-bg my-dark-blue-text dark-blue-translucent-bg">
+            </div>
+            <!--<div class="center translucent-bg my-dark-blue-text dark-blue-translucent-bg">
                 <div class="large-font">Lesson Plans</div>
                 <button class="btn btn-DBS shadow" style="margin-bottom: 30px; font-size: 28px;" onclick="lessonPlans()">Download All Lesson Plans</button>
-            </div>
+            </div>-->
         </div>
 
         <!-- <div class="header-image-div">
