--- a/Index.html
+++ b/Index.html
@@ -116,51 +116,60 @@
 
             <div class="content-row">
                 <div class="card-container">
-                    <div class="clickable-card side-stack-3">
-                        <div class="image-div">
-                            <img class="image" src="Images/children_in_scuba.jpg" alt="Horned Shark">
-                        </div>
-                        <div class="card-header">
-                            NGSS Lesson Plans
-                        </div>
-                        <div class="card-body">
-                            Building on the Next Generation Science Standards
-                            Disciplinary Core Idea “Structure, Function, and Information Processing”,
-                            the Dive Beneath the Surface program uses the marine environment and
-                            organisms -- and live interactive SCUBA diving with your classroom -- to
-                            teach 4th graders to “construct an argument that plants and animals have
-                            internal and external structures that function to support survival, growth,
-                            behaviour, and reproduction (NGSS Performance Expectation 4-LS1- 1).”
-                        </div>
-                    </div>
-                    <div class="clickable-card side-stack-3">
-                        <div class="image-div">
-                            <img class="image" src="Images/scuba_in_kelp.jpg" alt="Horned Shark">
-                        </div>
-                        <div class="card-header">
-                            SCUBA Experience
-                        </div>
-                        <div class="card-body">
-                            Led by a team of Cal Poly students and faculty, this underwater experience
-                            will allow elementary school students to "dive beneath the surface." In our
-                            3-lesson series, Lesson 2 is an interactive, 30 minute SCUBA dive in the
-                            ocean along the California central coast observing and discussing the structures
-                            and functions of the marine organisms featured in lesson plan 1.
+                    <div style="padding: 15px;" class="side-stack-3">
+                        <div class="clickable-card">
+                            <div class="image-div">
+                                <img class="image" src="Images/children_in_scuba.jpg" alt="Horned Shark">
+                            </div>
+                            <div class="card-header">
+                                NGSS Lesson Plans
+                            </div>
+                            <div class="card-body">
+                                Building on the Next Generation Science Standards
+                                Disciplinary Core Idea “Structure, Function, and Information Processing”,
+                                the Dive Beneath the Surface program uses the marine environment and
+                                organisms -- and live interactive SCUBA diving with your classroom -- to
+                                teach 4th graders to “construct an argument that plants and animals have
+                                internal and external structures that function to support survival, growth,
+                                behaviour, and reproduction (NGSS Performance Expectation 4-LS1- 1).”
+                            </div>
                         </div>
                     </div>
-                    <div class="clickable-card side-stack-3">
-                        <div class="image-div">
-                            <img class="image" src="Images/3_divers.jpg" alt="Horned Shark">
-                        </div>
-                        <div class="card-header">
-                            Engineering
-                        </div>
-                        <div class="card-body">
-                            Students apply their knowledge of structure and function to engineering by
-                            designing, drawing and then comparing marine organisms with specific
-                            anatomical structures to support their survival, growth, behavior and reproduction.
+                    <div style="padding: 15px;" class="side-stack-3">
+                        <div class="clickable-card">
+                            <div class="image-div">
+                                <img class="image" src="Images/scuba_in_kelp.jpg" alt="Horned Shark">
+                            </div>
+                            <div class="card-header">
+                                SCUBA Experience
+                            </div>
+                            <div class="card-body">
+                                Led by a team of Cal Poly students and faculty, this underwater experience
+                                will allow elementary school students to "dive beneath the surface." In our
+                                3-lesson series, Lesson 2 is an interactive, 30 minute SCUBA dive in the
+                                ocean along the California central coast observing and discussing the structures
+                                and functions of the marine organisms featured in lesson plan 1.
+                            </div>
                         </div>
                     </div>
+
+                    <div style="padding: 15px;" class="side-stack-3">
+
+                        <div class="clickable-card">
+                            <div class="image-div">
+                                <img class="image" src="Images/3_divers.jpg" alt="Horned Shark">
+                            </div>
+                            <div class="card-header">
+                                Engineering
+                            </div>
+                            <div class="card-body">
+                                Students apply their knowledge of structure and function to engineering by
+                                designing, drawing and then comparing marine organisms with specific
+                                anatomical structures to support their survival, growth, behavior and reproduction.
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
             </div>
