a lot of shit i forgot to commit

--- a/Background/index.html
+++ b/Background/index.html
@@ -82,10 +82,10 @@
             background-color: aliceblue;
         }
 
-    .raised-card {
+    /*.raised-card {
         box-shadow: 8px 8px 20px darkgray;
         border-radius: 5px;
-    }
+    }*/
 
     .flex {
         display: flex;
@@ -141,8 +141,8 @@
             <img class="header-image" src="../Images/learning3.JPG" alt="First slide">
             <div class="center translucent-bg my-light-black-text dark-blue-translucent-bg">
                 <div class="content-row-transparent">
-                    <div class="raised-card flex">
-                        <div id="mission-content">
+                    <div class="flex">
+                        <div class="about-content">
                             Together a team comprised of Cal Poly professors and students created an
                             educational experience that combined both their loves of marine biology and
                             their knowledge of the Next Generation Science Standards. Meet the team of dedicated
