--- a/LessonPlans/index.html
+++ b/LessonPlans/index.html
@@ -4,6 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="utf-8" />
     <title>DBS Website</title>
@@ -70,130 +71,70 @@
             </div>
 
             <div class="content-row">
-                <div class="clickable-card flex" onclick="lesson1()">
-                    <div class="lesson-header">
-                        <div class="image-div">
-                            <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
-                            <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
+                <div class="flex">
+                    <div class="col-md-6">
+                        <div class="clickable-card" onclick="lesson1()">
+                            <div class="image-div">
+                                <div class="image-text"><div>Lesson 1</div></div>
+                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                            </div>
+                            <div class="card-header">
                                 Lesson 1
+                                <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                            </div>
+                            <div class="card-body">
+                                Description for 1st lesson.
                             </div>
                         </div>
                     </div>
-                    <div class="lesson-content" id="lesson1">
-                        Description for the 1st lesson.
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-row">
-                <div class="clickable-card flex" onclick="lesson2()">
-                    <div class="lesson-header">
-                        <div class="image-div">
-                            <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
-                            <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
+                    <div class="col-md-6">
+                        <div class="clickable-card" onclick="lesson2()">
+                            <div class="image-div">
+                                <div class="image-text"><div>Lesson 2</div></div>
+                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                            </div>
+                            <div class="card-header">
                                 Lesson 2
+                                <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                            </div>
+                            <div class="card-body">
+                                Description for 2nd lesson.
                             </div>
                         </div>
-                    </div>
-                    <div class="lesson-content" id="lesson1">
-                        Description for the 2nd lesson.
                     </div>
                 </div>
             </div>
 
-            <div class="content-row">
-                <div class="clickable-card flex" onclick="lesson3()">
-                    <div class="lesson-header">
-                        <div class="image-div">
-                            <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
-                            <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
+            <div class="content-row flex">
+                <div class="flex">
+                    <div class="col-md-6">
+                        <div class="clickable-card" onclick="lesson3()">
+                            <div class="image-div">
+                                <div class="image-text"><div>Lesson 3</div></div>
+                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                            </div>
+                            <div class="card-header">
                                 Lesson 3
+                                <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                            </div>
+                            <div class="card-body">
+                                Description for 3rd lesson.
                             </div>
                         </div>
                     </div>
-                    <div class="lesson-content" id="lesson1">
-                        Description for the 3rd lesson.
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-row">
-                <div class="clickable-card flex" onclick="lesson4()">
-                    <div class="lesson-header">
-                        <div class="image-div">
-                            <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
-                            <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
+                    <div class="col-md-6">
+                        <div class="clickable-card" onclick="lesson4()">
+                            <div class="image-div">
+                                <div class="image-text"><div>Lesson 4</div></div>
+                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
+                            </div>
+                            <div class="card-header">
                                 Lesson 4
+                                <i class="fa fa-external-link" style="padding-left: 3px;"></i>
                             </div>
-                        </div>
-                    </div>
-                    <div class="lesson-content" id="lesson1">
-                        Description for the 4th lesson.
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-row flex">
-                <div class="col-md-6">
-                    <div class="clickable-card" onclick="lesson1()">
-                        <div class="lesson-header">
-                            <div class="image-div">
-                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
-                                <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
-                                    Lesson 1
-                                </div>
+                            <div class="card-body">
+                                Description for 4th lesson.
                             </div>
-                        </div>
-                        <div class="lesson-content">
-                            Description for the 1st lesson.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="clickable-card" onclick="lesson2()">
-                        <div class="lesson-header">
-                            <div class="image-div">
-                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
-                                <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
-                                    Lesson 2
-                                </div>
-                            </div>
-                        </div>
-                        <div class="lesson-content">
-                            Description for the 2nd lesson.
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="content-row flex">
-                <div class="col-md-6">
-                    <div class="clickable-card" onclick="lesson3()">
-                        <div class="lesson-header">
-                            <div class="image-div">
-                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
-                                <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
-                                    Lesson 3
-                                </div>
-                            </div>
-                        </div>
-                        <div class="lesson-content">
-                            Description for the 3rd lesson.
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="clickable-card" onclick="lesson4()">
-                        <div class="lesson-header">
-                            <div class="image-div">
-                                <img class="image" src="../Images/children_in_scuba.jpg" alt="Horned Shark">
-                                <div class="translucent-bg top-center my-dark-blue-text dark-blue-translucent-bg" style="font-size: 48px; text-shadow: 1px 1px 6px black; color: white;">
-                                    Lesson 4
-                                </div>
-                            </div>
-                        </div>
-                        <div class="lesson-content">
-                            Description for the 4th lesson.
                         </div>
                     </div>
                 </div>
