--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
 
     <div class="container" id="overall-container">
         <div class="container" id="header-div">
-            <a href="Index.html">
+            <a href="Index.html" class="nav-menu-left">
                 <div class="logo">
-                    <span><img width="80" height="80" src="Images/logo.jpg" alt="DBS Logo"></span>
-                    <span class="title">Dive Beneath the Surface</span>
+                        <img width="80" height="80" src="Images/logo.jpg" alt="DBS Logo">
+                    <div class="title">
+                        <div>
+                            Dive Beneath the Surface
+                        </div>
+                    </div>
                 </div>
             </a>
 
@@ -101,79 +105,87 @@
             </div>
 
             <div class="content-row">
-                <div class="raised-card flex">
-                    <div id="mission-label" style="display: table-cell">
-                        <div style="display: inline-block">MISSION</div>
-                    </div>
-                    <div id="mission-content">
-                        Our Mission is to combine marine science, education and technology to create a
-                        multi-sensory and interactive educational experience of the ocean for elementary
-                        school students learning science and engineering.
+                <div>
+                    <div class="raised-card flex">
+                        <div id="mission-label" style="display: flex">
+                            <div>
+                                <div class="mission-text">MISSION</div>
+                            </div>
+                        </div>
+                        <div id="mission-content">
+                            Our Mission is to combine marine science, education and technology to create a
+                            multi-sensory and interactive educational experience of the ocean for elementary
+                            school students learning science and engineering.
+                        </div>
                     </div>
                 </div>
-
             </div>
 
             <div class="content-row">
-                <div class="card-container">
-                    <div style="padding: 15px;" class="side-stack-3">
-                        <div class="clickable-card">
-                            <div class="image-div">
-                                <img class="image" src="Images/children_in_scuba.jpg" alt="Horned Shark">
+                <div>
+                    <div class="card-container">
+                        <div class="side-stack-3">
+                            <div class="clickable-card">
+                                <div class="image-div">
+                                    <div class="image-text"><div>NGSS Lesson Plans</div></div>
+                                    <img class="image" src="Images/children_in_scuba.jpg" alt="Horned Shark">
+                                </div>
+                                <div class="card-header">
+                                    NGSS Lesson Plans
+                                    <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                                </div>
+                                <div class="card-body">
+                                    Building on the Next Generation Science Standards
+                                    Disciplinary Core Idea “Structure, Function, and Information Processing”,
+                                    the Dive Beneath the Surface program uses the marine environment and
+                                    organisms -- and live interactive SCUBA diving with your classroom -- to
+                                    teach 4th graders to “construct an argument that plants and animals have
+                                    internal and external structures that function to support survival, growth,
+                                    behaviour, and reproduction (NGSS Performance Expectation 4-LS1- 1).”
+                                </div>
                             </div>
-                            <div class="card-header">
-                                NGSS Lesson Plans
+                        </div>
+                        <div class="side-stack-3">
+                            <div class="clickable-card">
+                                <div class="image-div">
+                                    <div class="image-text"><div>SCUBA Experience</div></div>
+                                    <img class="image" src="Images/scuba_in_kelp.jpg" alt="Horned Shark">
+                                </div>
+                                <div class="card-header">
+                                    SCUBA Experience
+                                    <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                                </div>
+                                <div class="card-body">
+                                    Led by a team of Cal Poly students and faculty, this underwater experience
+                                    will allow elementary school students to "dive beneath the surface." In our
+                                    3-lesson series, Lesson 2 is an interactive, 30 minute SCUBA dive in the
+                                    ocean along the California central coast observing and discussing the structures
+                                    and functions of the marine organisms featured in lesson plan 1.
+                                </div>
                             </div>
-                            <div class="card-body">
-                                Building on the Next Generation Science Standards
-                                Disciplinary Core Idea “Structure, Function, and Information Processing”,
-                                the Dive Beneath the Surface program uses the marine environment and
-                                organisms -- and live interactive SCUBA diving with your classroom -- to
-                                teach 4th graders to “construct an argument that plants and animals have
-                                internal and external structures that function to support survival, growth,
-                                behaviour, and reproduction (NGSS Performance Expectation 4-LS1- 1).”
+                        </div>
+
+                        <div class="side-stack-3">
+
+                            <div class="clickable-card">
+                                <div class="image-div">
+                                    <div class="image-text"><div>Engineering</div></div>
+                                    <img class="image" src="Images/3_divers.jpg" alt="Horned Shark">
+                                </div>
+                                <div class="card-header">
+                                    Engineering
+                                    <i class="fa fa-external-link" style="padding-left: 3px;"></i>
+                                </div>
+                                <div class="card-body">
+                                    Students apply their knowledge of structure and function to engineering by
+                                    designing, drawing and then comparing marine organisms with specific
+                                    anatomical structures to support their survival, growth, behavior and reproduction.
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div style="padding: 15px;" class="side-stack-3">
-                        <div class="clickable-card">
-                            <div class="image-div">
-                                <img class="image" src="Images/scuba_in_kelp.jpg" alt="Horned Shark">
-                            </div>
-                            <div class="card-header">
-                                SCUBA Experience
-                            </div>
-                            <div class="card-body">
-                                Led by a team of Cal Poly students and faculty, this underwater experience
-                                will allow elementary school students to "dive beneath the surface." In our
-                                3-lesson series, Lesson 2 is an interactive, 30 minute SCUBA dive in the
-                                ocean along the California central coast observing and discussing the structures
-                                and functions of the marine organisms featured in lesson plan 1.
-                            </div>
-                        </div>
-                    </div>
-
-                    <div style="padding: 15px;" class="side-stack-3">
-
-                        <div class="clickable-card">
-                            <div class="image-div">
-                                <img class="image" src="Images/3_divers.jpg" alt="Horned Shark">
-                            </div>
-                            <div class="card-header">
-                                Engineering
-                            </div>
-                            <div class="card-body">
-                                Students apply their knowledge of structure and function to engineering by
-                                designing, drawing and then comparing marine organisms with specific
-                                anatomical structures to support their survival, growth, behavior and reproduction.
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
-
             </div>
-
         </div>
 
         <div id="footer">
